compiler/toc-hir-lowering/tests/snapshots/lowering__lower_result_stmt.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "fcn _ : string result \"sus\" end _"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..33): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..33): []
        StmtItem@(FileId(1), 0..33): ItemId(0)
          Subprogram@(FileId(1), 0..33): "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..14): String
            StmtBody@(FileId(1), 15..27): []
              Result@(FileId(1), 15..27)
                Literal@(FileId(1), 22..27): String("sus")

