compiler/toc-hir-lowering/tests/snapshots/lowering__lower_return_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: return
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..6): "<root>"@(dummy)
      StmtBody@(src/main.t:0..6): []
        Return@(src/main.t:0..6)
