compiler/toc-hir-lowering/tests/snapshots/lowering__lower_set_ty.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : set of boolean"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..23): "<root>"@(dummy)
      StmtBody@(src/main.t:0..23): []
        StmtItem@(src/main.t:0..23): ItemId(0)
          Type@(src/main.t:0..23): "_"@(src/main.t:5..6)
            Set@(src/main.t:9..23): "_"@(src/main.t:9..23)
              Primitive@(src/main.t:16..23): Boolean
