compiler/toc-hir-lowering/tests/snapshots/lowering__lower_simple_assignment-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "1 := 2"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..6): "<root>"@(dummy)
      StmtBody@(src/main.t:0..6): []
        Assign@(src/main.t:0..6)
          Literal@(src/main.t:0..1): Integer(1)
          Literal@(src/main.t:5..6): Integer(2)
