compiler/toc-hir-lowering/tests/snapshots/lowering__lower_type_def-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type alias : "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..13): "<root>"@(dummy)
      StmtBody@(src/main.t:0..12): []
        StmtItem@(src/main.t:0..12): ItemId(0)
          Type@(src/main.t:0..12): "alias"@(src/main.t:5..10)
error at src/main.t:11..12: unexpected end of file
| error for src/main.t:11..12: expected type specifier after here
