compiler/toc-hir-lowering/tests/snapshots/lowering__lower_type_def-4.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type : forward"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..14): "<root>"@(dummy)
      StmtBody@(src/main.t:0..14): []
        StmtItem@(src/main.t:0..14): ItemId(0)
          Type@(src/main.t:0..14): forward "<unnamed>"@(src/main.t:0..14)
error at src/main.t:5..6: unexpected token
| error for src/main.t:5..6: expected identifier, but found `:`
