compiler/toc-hir-lowering/tests/snapshots/lowering__lower_type_def.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type alias : int"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        StmtItem@(FileId(1), 0..16): ItemId(0)
          Type@(FileId(1), 0..16): "alias"@(FileId(1), 5..10)
            Primitive@(FileId(1), 13..16): Int

